--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,12 +1,31 @@
 @charset "UTF-8";
 
 body {
-	background-color: white;
+	background-color: #dddddd;
 	color: rgba(0,0,0,1);
 }
+
+div#interface {
+	width: 900;
+	background-color: #ffffff;
+	margin: -20px auto 0px auto;
+	padding: 10px;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+}
+
 p {
 	text-align: justify;
 	text-indent: 50px;
+}
+
+header#cabecalho img#icone {
+	position: absolute;
+	left: 780px;
+	top: 40px;
+}
+
+header#cabecalho {
+	
 }
 
 /* Formatação de imagens com legendas */
@@ -58,8 +77,23 @@ nav#menu li {
 	background-color: #dddddd;
 	padding: 10px;
 	margin: 2px;
+	transition: background-color 1s
+}
+
+nav#menu li:hover {
+	background-color: #606060;
 }
 
 nav#menu h1 {
 	display: none;	
+}
+
+nav#menu a {
+	color: #000000;
+	text-decoration: none;
+}
+
+nav#menu a:hover{
+	color: #ffffff;
+	text-decoration: underline;
 }
