--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+	font-family: 'FonteLogo';
+	src: url("../_fonts/bubblegum-sans-regular.otf")
+}
 
 body {
 	background-color: #dddddd;
@@ -21,11 +25,30 @@ p {
 header#cabecalho img#icone {
 	position: absolute;
 	left: 780px;
-	top: 40px;
+	top: 70px;
 }
 
 header#cabecalho {
-	
+	border-bottom: 1px #606060 solid;
+	height: 150px;
+	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+}
+
+header#cabecalho h1 {
+	font-family: 'FonteLogo', sans-serif;
+	font-size: 30px;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
+header#cabecalho h2 {
+	font-family: Arial, sans-serif;
+	color: #888888;
+	font-size: 15pt;
+	padding: 0px;
+	margin-top: 0px;
 }
 
 /* Formatação de imagens com legendas */
@@ -38,7 +61,7 @@ figure.foto-legenda {
 
 figure.foto-legenda img {
 	width: 100%;
-	height: 100%;
+	height: auto;
 }
 
 figure.foto-legenda figcaption {
@@ -96,4 +119,27 @@ nav#menu a {
 nav#menu a:hover{
 	color: #ffffff;
 	text-decoration: underline;
+}
+
+section#corpo {
+	display: block;
+	width: 520px;
+	float: left;
+	border-right: 1px solid #606060;
+	padding-right: 15px;
+}
+
+aside#lateral {
+	display: block;
+	width: 350px;
+	float: right;
+}
+
+footer#rodape{
+	clear: both;
+	border-top: 1px solid #606060;
+}
+
+footer#rodape {
+	text-align-last: center;
 }
