--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -129,6 +129,20 @@ section#corpo {
 	padding-right: 15px;
 }
 
+table#tabelaspec {
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+table#tabelaspec td {
+	border: 1px solid #606060;
+	padding: 10pt;
+	text-align: center;
+	vertical-align: middle;
+}
+
 aside#lateral {
 	display: block;
 	width: 350px;
@@ -143,3 +157,6 @@ footer#rodape{
 footer#rodape {
 	text-align-last: center;
 }
+
+
+
